Simplify and improve

--- a/build
+++ b/build
@@ -3,10 +3,9 @@ set -e
 JDK_REL=buildtools/jbr
 test -x $JDK_REL/bin/java
 export JAVA_HOME=`pwd`/$JDK_REL
-rm -f .built
 mkdir -p fork
 cd fork
 test -d geogebra || git clone https://github.com/kovzol/geogebra
 cd geogebra
+git pull
 ./gradlew :desktop:installDist
-touch ../../.built
